--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -34,12 +34,13 @@
 .card__title {
   font-family: "Switzer", sans-serif;
   font-size: 1.2em;
-  font-weight: 500;
+  font-weight: 500 bold;
   margin-bottom: 15px;
   width: 239.62px;
   line-height: 30.19px;
   height: 60px;
   letter-spacing: -0.01em;
+  color: "#000000";
 }
 
 .card__description {
@@ -54,20 +55,21 @@
 
 .card__author,
 .card__date {
+  font-family: "Switzer", sans-serif;
   font-size: 0.8em;
   color: gray;
 }
 
 .truncate {
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* Giới hạn 2 dòng */
+  -webkit-line-clamp: 2; /* Giới hạn 2 dòng */
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
 .landscape__image {
-  width: 300px;
-  height: 300px;
+  width: 237px;
+  height: 257px;
   object-fit: contain;
   border-radius: 25px;
 }
